<resources>
    <string name="app_name">RecetApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">What\'s in my fridge?</string>
    <string name="title_dashboard_short">My fridge</string>
    <string name="title_results">Results</string>
    <string name="title_details">Details</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_recipes_drawer_title">My recipes</string>
    <string name="my_cookbooks_drawer_title">My cookbooks</string>
    <string name="my_favorites_drawer_title">Favorites</string>
    <string name="sign_out_drawer_title">Sign out</string>
    <string name="profile_photo_content_desc">Profile picture</string>
    <string name="search_recipe_button_label">Search recipes</string>
    <string name="clear_ingredient_list">Clear list</string>
    <string name="empty_recipes_by_ingredients_screen_message">
        You don\'t need to leave home to cook something delicious \n\n Start adding ingredients and we\'ll find the right recipe for you.
    </string>
    <string name="start_adding_ingredients">Start adding ingredients</string>
    <string name="discover_title">Discover</string>
    <string name="categories_title">Categories</string>
    <string name="meal_type_category_title">Meal types</string>
    <string name="cuisine_category_title">Cuisines</string>
    <string name="diets_category_title">Diets</string>
    <string name="my_web_client_id">496813332038-7mkbun840uuhovji8r5go8uekomq9n19.apps.googleusercontent.com</string>
    <string name="toast_sign_in_error_message">Failed to log in, please try again later</string>
    <string name="tab_item_summary">Summary</string>
    <string name="tab_item_Ingredients">Ingredients</string>
    <string name="tab_item_Instructions">Instructions</string>
    <string name="tab_layout_recipe_info">Recipe information</string>
    <string name="display_recipe_info">Display recipe info</string>
    <string name="step_time_label">Time: </string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="equipment_label">Equipment:</string>
    <string name="empty_favorites_message">Here you can find your favorite recipes \n\n Start adding!</string>
    <string name="no_internet_connection_change_message">A change in the internet state was detected, some features may not work properly</string>
    <string name="positive_dialog_action">OK</string>
    <string name="no_internet_connection">You are not connected to internet, some features may not work properly</string>
</resources>