<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recetapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_recipesByCategoriesFragment"
            app:destination="@id/recipesByCategoriesFragment" />
        <action
            android:id="@+id/action_navigation_home_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.recetapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_recipeByIngredientFragment"
            app:destination="@id/recipeByIngredientFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.recetapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/recipeByIngredientFragment"
        android:name="com.example.recetapp.ui.dashboard.results.RecipeByIngredientFragment"
        android:label="Results"
        tools:layout="@layout/fragment_recipe_by_ingredient" />
    <fragment
        android:id="@+id/recipesByCategoriesFragment"
        android:name="com.example.recetapp.ui.home.RecipesByCategoriesFragment"
        android:label="fragment_recipes_by_categories"
        tools:layout="@layout/fragment_recipe_by_categories" />
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.example.recetapp.ui.RecipeDetailsFragment"
        android:label="fragment_recipe_details"
        tools:layout="@layout/fragment_recipe_details" />
</navigation>